--- a/The-Eternal-Market/client/main.html
+++ b/The-Eternal-Market/client/main.html
@@ -16,6 +16,7 @@
 	    <!-- content-->
 	    <main class="dapp-content">
 	    <h1>The Eternal Market</h1>
+	    {{notConnected}}
 	        {{> yield}}
 	    </main>
 	
